v1.1.2

CShion's stats changed:
 40/60/35/80/80/75 -> 50/70/45/90/90/25
New sprites for Shion, Joon, and Narumi lines.

v1.1.1

Fix the fight codes.

v1.1.0

The mart questionnaire now offers a bunch of cheat functions for those who know the secret words.
Some Cut trees stay removed once cut down.
 - The ones related to Erika are a deliberate exception to this.
Entering the Hall of Fame now removes the restrictions on the Move Tutor.
 - This is not retroactive; old saves will need to beat the Champion again.
Fixed TYumemi's and Shion's backsprites.
Touched up AShinki's sprites a bit (thanks BluShell)
Fixed many instances of mons learning moves by level but not by TM, or learning a move twice.
AdCirno now learns Revenge.
DRemilia now learns Defense Curl (might be too much)
Rotated some Alice moves around to prevent Dark Alice from having Substitute.
AdAlice now learns Sweet Kiss.
SWriggle can now be TM'd Thunder Wave.
All Mystia forms now learn Cut.
Non-chibi Eiki forms now learn Torment.
Shizuha and SShizuha now learn Burn Powder.
Entire Momiji line can now be TM'd Spikes.
Sanae now learns Whirlwind.
Entire Kogasa line can now be TM'd Extrasensory.
Murasa now learns Bulk Up.
Entire Luna line can now be TM'd Mirror Coat.
Entire Kokoro line can now be TM'd Counter.
Entire Shinmyoumaru line can now be TM'd Psycho Cut.
Seiran now learns Agility.
Hisami can now be tutored Leaf Storm.
AI avoids using Thunder Wave on Earth-types.
Puppets now refuse to hold evolution items that don't apply to them.
Removed an item from the Department Store that wasn't meant to be there.
You now gain a minimum of 1 experience from very underleveled foes.

=======================================================

v1.0.6

Fix critical issue breaking everyone's starting moveset.
Overhaul TKyouko to be a special attacker.


v1.0.5

New ability: Sunbathing. It cures status at end of turn during sun.
 - It replaces Guts for TCirno, replaces Chlorophyll for HShizuha and DMinoriko.