@@ -53,7 +53,6 @@ CeladonCity_DepartmentStore_2F_TMs:: @ 816BB74
 	.2byte ITEM_TM44
 	.2byte ITEM_TM45
 	.2byte ITEM_TM57
-	.2byte ITEM_TM60
 	.2byte ITEM_TM75
 	.2byte ITEM_TM77
 	.2byte ITEM_TM79
@@ -74,6 +73,7 @@ CeladonCity_DepartmentStore_2F_EventScript_ClerkMoreTMs:: @ 816BB4E
 
 	.align 2
 CeladonCity_DepartmentStore_2F_MoreTMs:: @ 816BB74
+	.2byte ITEM_TM60
 	.2byte ITEM_TM61
 	.2byte ITEM_TM62
 	.2byte ITEM_TM66
