@@ -14,8 +14,8 @@ Route7_EastEntrance_Text_ThanksIllShareTeaWithGuards:: @ 819E32D
     .string "Glug, glug…\l"
     .string "… …\l"
     .string "Gulp…\l"
-    .string "If you want to go to SAFFRON\l"
-    .string "CITY…\l"
+    .string "If you want to go to Saffron\l"
+    .string "City…\l"
     .string "… …\l"
     .string "You can go on through.\p"
     .string "I'll share this Tea with the other\n"
