@@ -9548,7 +9548,7 @@ const struct BaseStats gBaseStats[] =
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
         .abilities = { ABILITY_FLAWLESS, ABILITY_FLAWLESS },
-        .hiddenAbility = ABILITY_PURE_FURIES,
+        .hiddenAbility = ABILITY_BELLIGERENT,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
         .cost = 90,
@@ -9574,7 +9574,7 @@ const struct BaseStats gBaseStats[] =
         .eggGroup1 = EGG_GROUP_HUMAN_LIKE,
         .eggGroup2 = EGG_GROUP_HUMAN_LIKE,
         .abilities = { ABILITY_FLAWLESS, ABILITY_FLAWLESS },
-        .hiddenAbility = ABILITY_PURE_FURIES,
+        .hiddenAbility = ABILITY_BELLIGERENT,
         .safariZoneFleeRate = 0,
         .noFlip = TRUE,
         .cost = 120,
