@@ -380,7 +380,7 @@ const u8 gMoveDescription_Gale[] = _("+1 Priority.");
 const u8 gMoveDescription_AbyssNova[] = _("The user faints.");
 const u8 gMoveDescription_Mishaguji[] = _("100%: Curses foe.");
 const u8 gMoveDescription_AegisMerge[] = _("+3 Defense, Sp. Def\nRestores 1/16 HP\neach turn, but\nforbids switching.");
-const u8 gMoveDescription_Exterminate[] = _("A plain attack.");
+const u8 gMoveDescription_Exterminate[] = _("Bypasses Abilities.");
 const u8 gMoveDescription_OblivionWing[] = _("User recovers 75%\nof the damage\ndealt.");
 const u8 gMoveDescription_FireFang[] = _("10%: Burn foe.\n10%: Foe flinches.");
 const u8 gMoveDescription_IceFang[] = _("10%: Freeze foe.\n10%: Foe flinches.");
@@ -398,7 +398,7 @@ const u8 gMoveDescription_HammerArm[] = _("100%: -1 Own Speed.");
 const u8 gMoveDescription_BoltStrike[] = _("10%: Paralyze foe.");
 const u8 gMoveDescription_AnchorShot[] = _("A plain attack.");
 const u8 gMoveDescription_Sutra[] = _("A plain attack.");
-const u8 gMoveDescription_PristineShot[] = _("Won't miss unless\nentirely unable to\nhit the foe.\nBypasses Detect.");
+const u8 gMoveDescription_PristineShot[] = _("Won't randomly miss.\nBypasses Detect.\nBypasses Abilities.");
 const u8 gMoveDescription_Destitution[] = _("Ensnares the foe\nfor 4-5 turns,\npreventing escape.");
 const u8 gMoveDescription_EarthPress[] = _("Uses the Defense\nstat instead of\nthe Attack stat.");
 const u8 gMoveDescription_HappyHour[] = _("Doubles the prize\nmoney from winning\nthe battle.");
