@@ -2,7 +2,11 @@ v1.1.2
 
 CShion's stats changed:
  40/60/35/80/80/75 -> 50/70/45/90/90/25
-New sprites for Shion, Joon, and Narumi lines.
+New sprites for Shion and Joon (thanks BluShell).
+Hopefully actually fixed Ice Punch and ThunderPunch this time.
+Junko now gets Belligerent instead of Pure Furies.
+Pristine Shot and Exterminate now bypass the target's Ability if it would weaken or prevent the move.
+Play Ghost no longer claims credit for avoiding super-effective attacks that simply missed.
 
 v1.1.1
 
